              Apache Commons Compress 1.4 RELEASE NOTES

Apache Commons Compress software defines an API for working with compression and archive formats.
These include: bzip2, gzip, pack200 and ar, cpio, jar, tar, zip, dump.

Release 1.4.1

Changes in this version include:

Fixed Bugs:
o Ported libbzip2's fallback sort algorithm to
        BZip2CompressorOutputStream to speed up compression in certain
        edge cases.
 
For complete information on Commons Compress, including instructions on how to submit bug reports,
patches, or suggestions for improvement, see the Apache Commons Compress website:

http://commons.apache.org/compress/