@@ -42,12 +42,15 @@ The <action> type attribute can be add,update,fix,remove.
     <title>commons-compress</title>
   </properties>
   <body>
-    <release version="1.4.1" date="unreleased"
+    <release version="1.4.1" date="2012-05-23"
              description="Release 1.4.1">
       <action type="fix" date="2012-05-20">
         Ported libbzip2's fallback sort algorithm to
         BZip2CompressorOutputStream to speed up compression in certain
         edge cases.
+
+        Using specially crafted inputs this can be used as a denial
+        of service attack.  See the security reports page for details.
       </action>
     </release>
     <release version="1.4" date="2012-04-11"
