@@ -32,6 +32,7 @@
       <item name="Conventions"    href="/conventions.html"/>
       <item name="Issue Tracking" href="/issue-tracking.html"/>
       <item name="Download"    href="/download_compress.cgi"/>
+      <item name="Security Reports"    href="/security.html"/>
       <item name="Wiki"        href="http://wiki.apache.org/commons/Compress"/>
     </menu>
   </body>
